updated jlink commands